--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,23 +5,23 @@
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "ajv": "^8.17.1",
-    "axios": "^1.8.1",
-    "bootstrap": "^5.3.3",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
-    "sweetalert2": "^11.17.2",
-    "web-vitals": "^2.1.4",
+    "sweetalert2": "^11.21.0",
+    "web-vitals": "^4.2.4",
     "yup": "^1.6.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
